// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getComponentCss() should return correct css for listType: ordered, orderType: alphabetically and theme: dark 1`] = `
":host {
  display: block;
  counter-reset: p-text-list-counter !important;
}
:host([hidden]) {
  display: none !important;
}
ol,ul {
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  color: #FBFCFF;
  margin: 0;
  padding: var(--p-internal-text-list-padding-top,0) 0 var(--p-internal-text-list-padding-bottom,0) var(--p-internal-text-list-ordered-padding-left,1.5rem);
  list-style-type: none;
}
::slotted(*) {
  --p-internal-text-list-padding-top: 4px;
  --p-internal-text-list-padding-bottom: 16px;
  --p-internal-text-list-ordered-padding-left: 2rem;
  --p-internal-text-list-unordered-padding-left: .625rem;
  --p-internal-text-list-list-style-type: "–";
}
::slotted([role="listitem"])::before {
  content: counters(p-text-list-counter,'.',lower-latin) var(--p-internal-text-list-pseudo-suffix,'.');
  counter-increment: p-text-list-counter;
  position: absolute;
  top: 0;
  left: 0;
  transform: translate(-100%,0);
}"
`;

exports[`getComponentCss() should return correct css for listType: ordered, orderType: alphabetically and theme: light 1`] = `
":host {
  display: block;
  counter-reset: p-text-list-counter !important;
}
:host([hidden]) {
  display: none !important;
}
ol,ul {
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  color: #010205;
  margin: 0;
  padding: var(--p-internal-text-list-padding-top,0) 0 var(--p-internal-text-list-padding-bottom,0) var(--p-internal-text-list-ordered-padding-left,1.5rem);
  list-style-type: none;
}
::slotted(*) {
  --p-internal-text-list-padding-top: 4px;
  --p-internal-text-list-padding-bottom: 16px;
  --p-internal-text-list-ordered-padding-left: 2rem;
  --p-internal-text-list-unordered-padding-left: .625rem;
  --p-internal-text-list-list-style-type: "–";
}
::slotted([role="listitem"])::before {
  content: counters(p-text-list-counter,'.',lower-latin) var(--p-internal-text-list-pseudo-suffix,'.');
  counter-increment: p-text-list-counter;
  position: absolute;
  top: 0;
  left: 0;
  transform: translate(-100%,0);
}"
`;

exports[`getComponentCss() should return correct css for listType: ordered, orderType: numbered and theme: dark 1`] = `
":host {
  display: block;
  counter-reset: p-text-list-counter !important;
}
:host([hidden]) {
  display: none !important;
}
ol,ul {
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  color: #FBFCFF;
  margin: 0;
  padding: var(--p-internal-text-list-padding-top,0) 0 var(--p-internal-text-list-padding-bottom,0) var(--p-internal-text-list-ordered-padding-left,1.5rem);
  list-style-type: none;
}
::slotted(*) {
  --p-internal-text-list-padding-top: 4px;
  --p-internal-text-list-padding-bottom: 16px;
  --p-internal-text-list-ordered-padding-left: 2rem;
  --p-internal-text-list-unordered-padding-left: .625rem;
  --p-internal-text-list-list-style-type: "–";
}
::slotted([role="listitem"])::before {
  content: counters(p-text-list-counter,'.',decimal) var(--p-internal-text-list-pseudo-suffix,'.');
  counter-increment: p-text-list-counter;
  position: absolute;
  top: 0;
  left: 0;
  transform: translate(-100%,0);
}"
`;

exports[`getComponentCss() should return correct css for listType: ordered, orderType: numbered and theme: light 1`] = `
":host {
  display: block;
  counter-reset: p-text-list-counter !important;
}
:host([hidden]) {
  display: none !important;
}
ol,ul {
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  color: #010205;
  margin: 0;
  padding: var(--p-internal-text-list-padding-top,0) 0 var(--p-internal-text-list-padding-bottom,0) var(--p-internal-text-list-ordered-padding-left,1.5rem);
  list-style-type: none;
}
::slotted(*) {
  --p-internal-text-list-padding-top: 4px;
  --p-internal-text-list-padding-bottom: 16px;
  --p-internal-text-list-ordered-padding-left: 2rem;
  --p-internal-text-list-unordered-padding-left: .625rem;
  --p-internal-text-list-list-style-type: "–";
}
::slotted([role="listitem"])::before {
  content: counters(p-text-list-counter,'.',decimal) var(--p-internal-text-list-pseudo-suffix,'.');
  counter-increment: p-text-list-counter;
  position: absolute;
  top: 0;
  left: 0;
  transform: translate(-100%,0);
}"
`;

exports[`getComponentCss() should return correct css for listType: unordered, orderType: numbered and theme: dark 1`] = `
":host {
  display: block;
  counter-reset: p-text-list-counter !important;
}
:host([hidden]) {
  display: none !important;
}
ol,ul {
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  color: #FBFCFF;
  margin: 0;
  padding: var(--p-internal-text-list-padding-top,0) 0 var(--p-internal-text-list-padding-bottom,0) var(--p-internal-text-list-unordered-padding-left,.375rem);
  list-style-type: var(--p-internal-text-list-list-style-type,'•');
}
::slotted(*) {
  --p-internal-text-list-padding-top: 4px;
  --p-internal-text-list-padding-bottom: 16px;
  --p-internal-text-list-ordered-padding-left: 2rem;
  --p-internal-text-list-unordered-padding-left: .625rem;
  --p-internal-text-list-list-style-type: "–";
}"
`;

exports[`getComponentCss() should return correct css for listType: unordered, orderType: numbered and theme: light 1`] = `
":host {
  display: block;
  counter-reset: p-text-list-counter !important;
}
:host([hidden]) {
  display: none !important;
}
ol,ul {
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  color: #010205;
  margin: 0;
  padding: var(--p-internal-text-list-padding-top,0) 0 var(--p-internal-text-list-padding-bottom,0) var(--p-internal-text-list-unordered-padding-left,.375rem);
  list-style-type: var(--p-internal-text-list-list-style-type,'•');
}
::slotted(*) {
  --p-internal-text-list-padding-top: 4px;
  --p-internal-text-list-padding-bottom: 16px;
  --p-internal-text-list-ordered-padding-left: 2rem;
  --p-internal-text-list-unordered-padding-left: .625rem;
  --p-internal-text-list-list-style-type: "–";
}"
`;
